samples/_failures_safe/1761209870_5573f6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2b9402fe.c: In function ‘main’:
./samples/SAFE/__tmp_2b9402fe.c:172:17: error: expected expression at end of input
  172 |                 if (!safe_str_to_int(input, &sm.number))
      |                 ^~
./samples/SAFE/__tmp_2b9402fe.c:172:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2b9402fe.c:172:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2b9402fe.c:172:17: error: expected declaration or statement at end of input
